TimedOperations added
Little optional fixes in CommandListenerRegisterer, CustomCommandListener, CustomEventListener, LoggerController, ModmailCommand

Convert CommandRegisterer, GlobalSlashCommands, MainUtil, RandomUserAgent, RequestUtils to enum

Add TimedOperationsExecutor class and implement a timed operation in ModmailListener to delete the old files

Added TimedOperationsExecutor in main and a static TimedOperationsExecutor in MainUtil

FileHandler
- Added few static methods